[package]
name = "crochet"
version = "0.2.2"
authors = ["Adamaq01 <adamthibert01@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A simple hooking library"
readme = "README.md"
repository = "https://github.com/Adamaq01/crochet"
documentation = "https://docs.rs/crochet"
keywords = ["hooking", "hook", "detour", "dll", "so"]

[dependencies]
crochet_macro = { path = "./crochet_macro", version = "0.2.1" }
detour = { package = "detour2", version = "0.9", default-features = false }
dlopen2 = "0.6"
lazy_static = "1.4"

[[example]]
name = "messageboxw"
crate-type = ["cdylib"]

[target."cfg(windows)".dev-dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "windef"] }
