[package]
name = "crochet_macro"
version = "0.2.2"
authors = ["Adamaq01 <adamthibert01@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A simple hooking library"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.6"
dlopen2 = "0.6"
